samples/_failures_safe/1761001864_68c1d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b541095b.c: In function ‘main’:
./samples/SAFE/__tmp_b541095b.c:156:13: error: expected declaration or statement at end of input
  156 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_b541095b.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b541095b.c:156:13: error: expected declaration or statement at end of input
